# blossom

./: .gitignore  .gitmodules  Cargo.toml  Justfile  Makefile.toml  build.zig  build.zig.zon  justfile  kernel.ld  run-qemu.sh  rust-toolchain.toml  rustfmt.toml  targets.zon  zls.json
.cargo/: config.toml
.zed/: settings.json
boot/: KernelImage.zig  loader.zig  logging.zig  root.zig  uefilib.zig
crates/boot/: Cargo.toml
esp/efi/boot/: bootaa64.efi
foo/: build.zig.zon
foo/src/: main.zig  root.zig
kernel/: klog.zig  root.zig
otf/: cmap.zig  root.zig
otf/glyf/: CompositeDescription.zig  TtfVm.zig
src/: Console.zig  main.rs  main.zig  root.zig
