[package]
name = "boot"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["qemu"]
qemu = ["uefi/qemu"]

[dependencies]
log.workspace = true
spin = "0.9.8"

[dependencies.uefi]
version = "0.34.1"
features = ["logger", "panic_handler"]
